--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-	"name": "listful-app",
+	"name": "listful-app-api",
 	"version": "0.0.1",
 	"license": "MIT",
 	"author": "Chris Klanac",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/cklanac/listful-app.git"
+		"url": "git+https://github.com/ThinkfulEd/listful-app-api.git"
 	},
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
 		"dev": "nodemon server.js",
-		"test": "mocha",
-		"custom": "echo hello world"
+		"test": "mocha"
 	},
 	"dependencies": {
 		"cors": "^2.8.4",
 		"express": "^4.16.2",
+		"joi": "^13.2.0",
 		"morgan": "^1.9.0"
 	},
 	"devDependencies": {
